# libccp

./: CMakeLists.txt  install.bat  test.bat
src/minneg/: distreg.c  distreg.h  minneg.c  minneg.h  msbars.c  msbars.h  utils.c  utils.h
src/punc/: punc.c  punc.h
test/: CMakeLists.txt  test_minneg.c  test_minneg.cpp  test_punc.c  test_punc.cpp
